# SVDSolver

./: .gitignore  CMakeLists.txt  Make  README.md  cuda_unit_tests.cu  generate_results_plots.ipynb  matrix.h  matrix_gpu.h  svd_cpu.cpp  svd_cpu.h  svd_cuda_1.cu  svd_cuda_2.cu  svd_cuda_test.cpp  svd_parallel.h  svd_serial.h  timing.h
data/: multcore_benchmark.csv
